--- a/src/styles.css
+++ b/src/styles.css
@@ -32,15 +32,15 @@ header nav button {
     font-size: 2rem;
     padding: 0.2em 2em;
     cursor: pointer;
-    border: none;
+    border-style: solid;
+    border-width: 0px 0px 2px 0px;
+    border-color: transparent;
     background-color: transparent;
     transition: 0.1s;
 }
 
 header nav button:hover {
     transform: scale(1.001);
-    border-style: solid;
-    border-width: 0px 0px 2px 0px;
     border-color: white;
 }
 
