--- a/src/styles.css
+++ b/src/styles.css
@@ -106,3 +106,26 @@ header nav button:hover {
   flex: 1;
   text-align: left;
 }
+
+.about {
+    color: white;
+    width: 50vw;
+    margin-left: auto;
+    padding-top: 50px;
+    text-align: center;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about h1 {
+    font-size: 5rem;
+}
+
+.about p {
+    width: 60ch;
+    font-size: 1.5rem;
+    line-height: 40px;
+}
